Added documentation for airtouch 4 integration

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -18,6 +18,7 @@ source/_integrations/aemet.markdown @noltari
 source/_integrations/agent_dvr.markdown @ispysoftware
 source/_integrations/airly.markdown @bieniu
 source/_integrations/airnow.markdown @asymworks
+source/_integrations/airtouch4.markdown @LonePurpleWolf
 source/_integrations/airvisual.markdown @bachya
 source/_integrations/alarmdecoder.markdown @ajschmidt8
 source/_integrations/alexa.markdown @home-assistant/cloud @ochlocracy
