--- a/_config.yml
+++ b/_config.yml
@@ -212,3 +212,10 @@ installation:
       variants:
         - name: "ASUS Tinkerboard"
           key: "tinker"
+
+    generic-x86-64:
+      board: Generic x86-64
+      installation_media: "S-ATA HDD/SSD/M.2 SSD/eMMC module"
+      variants:
+        - name: "Generic x86-64"
+          key: "generic-x86-64"
