--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ subtitle: Open source home automation that puts local control and privacy first.
 author: Home Assistant
 simple_search: https://www.google.com/search
 description: >-
-  Open source home automation and energy management platform that puts local control and privacy first.
+  Open source home automation and energy management that puts local control and privacy first.
   Powered by a worldwide community of tinkerers and DIY enthusiasts.
   Perfect to run on a Raspberry Pi or a local server.
 
